syntax = "proto3";
package sso.user_roles;
option go_package = "sso.user_roles.v1;user_roles";

import "google/protobuf/timestamp.proto";

service UserRoleService {
  rpc Assign(AssignRequest) returns (UserRole);
  rpc Revoke(RevokeRequest) returns (RevokeResponse);
  rpc ListForUser(UserRequest) returns (UserRolesResponse);
  rpc ListForRole(RoleRequest) returns (UserRolesResponse);
}

message UserRole {
  string user_id = 1;
  string role_id = 2;
  string client_id = 3;
  int32 app_id = 4;
  string assigned_by = 5;
  google.protobuf.Timestamp expires_at = 6;
  google.protobuf.Timestamp assigned_at = 7;
}

message AssignRequest {
  string user_id = 1;
  string role_id = 2;
  string client_id = 3;
  int32 app_id = 4;
  optional google.protobuf.Timestamp expires_at = 5;
  string assigned_by = 6;
}

message RevokeRequest {
  string user_id = 1;
  string role_id = 2;
  string client_id = 3;
  int32 app_id = 4;
}

message UserRequest {
  string user_id = 1;
  string client_id = 2;
  int32 app_id = 3;
  int32 page = 4;
  int32 count = 5;
}

message RoleRequest {
  string role_id = 1;
  string client_id = 2;
  int32 app_id = 3;
  int32 page = 4;
  int32 count = 5;
}

message UserRolesResponse {
  repeated UserRole assignments = 1;
  int32 total_count = 2;
  int32 current_page = 3;
  int32 app_id = 4;
}

message RevokeResponse {
  bool success = 1;
  google.protobuf.Timestamp revoked_at = 2;
}
